# masdiff

./: .gitignore  AGENTS.md  CHANGELOG.md  Justfile  README.md  masdiff.cabal
bench/: MSDFBatch.hs  MSDFBench.hs
docs/: api.md  reference_renderer.md  render_guide.md  spec_gaps.md  versioning.md
examples/sdl_gpu_wesl/: Main.hs  README.md  cabal.project  msdf-sdl-gen.cabal  sdl_gpu_msdf  sdl_gpu_msdf.c
examples/sdl_gpu_wesl/shaders/: msdf.frag.wesl  msdf.vert.wesl
examples/sdl_gpu_wesl/tools/: tga_to_png.py
lib/MSDF/: Binary.hs  Config.hs  Distance.hs  EdgeColoring.hs  Generated.hs  Geometry.hs  LazyAtlas.hs  MSDF.hs  Outline.hs  Render.hs  Types.hs
lib/MSDF/TTF/: GPOS.hs  Parser.hs  Variations.hs
tests/: MSDFTests.hs
tests/snapshots/: README.md
tests/snapshots/mtsdf_atlas/: atlas.rgba
tests/snapshots/mtsdf_glyphs/: U+0061.rgba  U+0064.rgba  U+0066.rgba  U+006D.rgba
tests/snapshots/render/: README.md
tools/: MSDFDump.hs  msdfgen_compare.py  msdfgen_compare.sh  msdfgen_diff.py  mtsdf_snapshots.sh  sdl_render_snapshot.sh  sdl_seam_guard.py  sdl_snapshot_diff.py
