cabal-version:      3.14
name:               masdiff
version:            0.1.0.0
synopsis:           Pure Haskell MSDF generator for TrueType fonts
description:
    Pure Haskell MSDF generator that parses TrueType fonts (glyf/loca/cmap)
    and produces per-glyph MSDF bitmaps with metrics and kerning (kern + GPOS).
    .
    Limitations: TrueType outlines only (no CFF), default variable-font axis
    values, and partial GPOS support (pair adjustments).
license:            MIT
license-file:       LICENSE
author:             mewhhaha
maintainer:         kopatheonlyone@hotmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                  , README.md
extra-source-files:
    assets/Inter/README.txt
  , assets/Inter/OFL.txt
data-files:
    "assets/Inter/Inter-VariableFont_opsz,wght.ttf"
  , assets/Inter/README.txt
  , assets/Inter/OFL.txt
tested-with:        GHC ==9.12.2

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
                    , MSDF.Types
                    , MSDF.Binary
                    , MSDF.TTF.Parser
                    , MSDF.TTF.GPOS
                    , MSDF.Outline
                    , MSDF.MSDF
                    , MSDF.Generated
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0
                    , array ^>=0.5.8.0
    hs-source-dirs:   lib
    default-language: GHC2024

test-suite msdf-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          MSDFTests.hs
    other-modules:    Paths_masdiff
    autogen-modules:  Paths_masdiff
    build-depends:    base ^>=4.21.0.0
                    , array ^>=0.5.8.0
                    , masdiff
    default-language: GHC2024
