cabal-version:      3.14
name:               masdiff
version:            0.2.0.1
synopsis:           Pure Haskell MSDF generator for TrueType fonts
description:
    Pure Haskell MSDF generator that parses TrueType fonts (glyf/loca/cmap)
    and produces per-glyph MSDF bitmaps with metrics and kerning (kern + GPOS).
    Variable font axes can be selected via MSDFConfig.variations.
    .
    Limitations: TrueType outlines only (no CFF), partial GPOS support (pair
    adjustments + mark attachments), and most MVAR tags.
license:            MIT
license-file:       LICENSE
author:             mewhhaha
maintainer:         kopatheonlyone@hotmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
                  , README.md
                  , docs/spec_gaps.md
                  , docs/api.md
                  , docs/render_guide.md
                  , docs/reference_renderer.md
                  , docs/versioning.md
extra-source-files:
    assets/Inter/README.txt
  , assets/Inter/OFL.txt
data-files:
    "assets/Inter/Inter-VariableFont_opsz,wght.ttf"
  , assets/Inter/README.txt
  , assets/Inter/OFL.txt
tested-with:        GHC ==9.12.2

common warnings
    ghc-options: -Wall

library
    import:           warnings
    default-extensions: DuplicateRecordFields
                        , NoFieldSelectors
                        , OverloadedRecordDot
    exposed-modules:  MSDF.Types
                    , MSDF.Binary
                    , MSDF.TTF.Parser
                    , MSDF.TTF.GPOS
                    , MSDF.TTF.Variations
                    , MSDF.Outline
                    , MSDF.MSDF
                    , MSDF.Render
                    , MSDF.Generated
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.21.0.0
                    , array ^>=0.5.8.0
                    , containers ^>=0.7
                    , deepseq ^>=1.5.0.0
                    , parallel ^>=3.2.2.0
    hs-source-dirs:   lib
    default-language: GHC2024

test-suite msdf-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          MSDFTests.hs
    other-modules:    Paths_masdiff
    autogen-modules:  Paths_masdiff
    build-depends:    base ^>=4.21.0.0
                    , array ^>=0.5.8.0
                    , masdiff
    default-language: GHC2024
    default-extensions: DuplicateRecordFields
                        , NoFieldSelectors
                        , OverloadedRecordDot

executable msdf-bench
    import:           warnings
    hs-source-dirs:   bench
    main-is:          MSDFBench.hs
    other-modules:    Paths_masdiff
    autogen-modules:  Paths_masdiff
    build-depends:    base ^>=4.21.0.0
                    , deepseq ^>=1.5.0.0
                    , masdiff
    default-language: GHC2024
    default-extensions: DuplicateRecordFields
                        , NoFieldSelectors
                        , OverloadedRecordDot

executable msdf-dump
    import:           warnings
    hs-source-dirs:   tools
    main-is:          MSDFDump.hs
    other-modules:    Paths_masdiff
    autogen-modules:  Paths_masdiff
    build-depends:    base ^>=4.21.0.0
                    , array ^>=0.5.8.0
                    , bytestring ^>=0.12.1.0
                    , directory ^>=1.3.9.0
                    , filepath ^>=1.5.4.0
                    , masdiff
    default-language: GHC2024
    default-extensions: DuplicateRecordFields
                        , NoFieldSelectors
                        , OverloadedRecordDot
