cabal-version:      3.14
name:               msdf-sdl-gen
version:            0.1.0.0
build-type:         Simple

executable msdf-sdl-gen
    hs-source-dirs:   .
    main-is:          Main.hs
    default-language: GHC2024
    default-extensions: DuplicateRecordFields
                        , OverloadedRecordDot
    build-depends:    base ^>=4.21.0.0
                    , array ^>=0.5.8.0
                    , bytestring ^>=0.12.1.0
                    , containers ^>=0.7
                    , directory ^>=1.3
                    , filepath ^>=1.5
                    , masdiff
                    , spirdo
